substrate/frame/support/test/tests/benchmark_ui/bad_attr_pov_mode_1.stderr
error: expected one of: `MaxEncodedLen`, `Measured`, `Ignored`
  --> tests/benchmark_ui/bad_attr_pov_mode_1.rs:24:25
   |
24 |     #[benchmark(pov_mode = Wrong)]
   |                            ^^^^^
